# fc-ransomware

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  server.js
src/: lib.rs  main.rs
