[package]
name = "fc-ransomware"
version = "0.1.0"
authors = ["Fredrik <fredrik.christenson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
base64 = "0.10.1"
rand = "0.6.5"
reqwest = "0.9.18"
